# fizim

./: .gitignore  README.md  local_ckan_interface.py  main.py  remote_ckan_interface.py  requirements.txt  utils.py
cvm-data-processor/: Exporter.py  exporter.py  main.py  pylintrc  pyproject.toml  yahoofinance.py
cvm-data-processor/cvm/: CvmClient.py  cvm_client.py  local_ckan_interface.py
cvm-data-processor/cvm/processing/: CompaniesRegisterNormalizer.py  Normalizer.py  normalization.py
cvm-data-processor/cvm/transformations/: normalization.py
cvm-data-processor/scrapping/: 10  14  16  18  2  20  21  4  5  6  7  9  b3_companies_scrapped.json  ivalor.com.br_Project.phj  run_results.csv  scrap.sh
cvm-data-processor/src/: utils.py  yahoofinance.py
cvm-data-processor/src/cvm/: clients.py  normalization.py
cvm-data-processor/src/scrapping/: 1  11  12  13  15  17  19  22  23  3  8  b3_companies.json  scrap.sh
fizz/: .yo-rc.json  README.md  app.jdl  package-lock.json  package.json  pom.xml  sonar-project.properties
fizz/.jhipster/: Balance.json
fizz/src/main/docker/: app.yml  monitoring.yml  postgresql.yml  sonar.yml
fizz/src/main/jib/: entrypoint.sh
fizz/src/main/resources/config/: application-dev.yml  application-prod.yml  application.yml
fizz/src/main/resources/i18n/: messages.properties  messages_en.properties  messages_pt_BR.properties
fizz/src/main/resources/swagger/: api.yml
fizz/src/main/webapp/: index.html  manifest.webapp
fizz/src/test/resources/: logback.xml
fizz/webpack/: webpack.common.js  webpack.dev.js  webpack.prod.js
(+141 files in other folders)
