[tool.poetry]
name = "cvm-data-processor"
version = "0.1.0"
description = ""
authors = ["Ramna Sidharta <ramna.thors@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.*"
simplejson = "3.17.2"
requests = "2.24.0"
ckanapi = "4.3"
yfinance = "*"

[tool.poetry.dev-dependencies]
pytest = "6.1.2"
pylint = "2.6.0"
pytest-asyncio = "0.14.0"

[build-system]
requires = ["poetry>=0.12"]

